<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgwithoutname"
    tools:context=".Home">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="433dp"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/hamburgerIcon"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="312dp"
        app:srcCompat="@drawable/hamberger_icon" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="84dp"
        android:layout_height="77dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="163dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="164dp"
        app:srcCompat="@drawable/profile_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="31dp"
        android:fontFamily="@font/ketibah"
        android:gravity="center"
        android:text="Hey, User"
        android:textColor="#000000"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="114dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="116dp"
        android:fontFamily="@font/ketibah"
        android:gravity="center"
        android:text="welcome to"
        android:textColor="#000000"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="211dp"
        app:srcCompat="@drawable/coconut_tree" />

    <ImageButton
        android:id="@+id/account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="153dp"
        android:background="@null"
        app:srcCompat="@drawable/account_btn" />

    <ImageButton
        android:id="@+id/diseases_btn"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="94dp"
        android:background="@null"
        app:srcCompat="@drawable/diseases_btn" />

    <ImageButton
        android:id="@+id/identifyDiseases_btn"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="34dp"
        android:background="@null"
        app:srcCompat="@drawable/identify_diseases_btn" />
</RelativeLayout>