<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidbgwithname"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="98dp"
        app:srcCompat="@drawable/insidebg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="249dp"
        android:layout_height="103dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="346dp"
        android:fontFamily="@font/ketibah"
        android:gravity="center"
        android:text="Login"
        android:textColor="#000000"
        android:textSize="80sp" />

    <ImageButton
        android:id="@+id/login_btn"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="101dp"
        android:background="@null"
        app:srcCompat="@drawable/login" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="270dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="14dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Email..."
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="14dp"
        app:srcCompat="@drawable/baseline_email_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginStart="29dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="193dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Password..."
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignEnd="@+id/imageView4"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="13dp"
        app:srcCompat="@drawable/baseline_lock_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="41dp"
        android:text="Don’t have an account ?"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/reigterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="42dp"
        android:text="REGISTER"
        android:textColor="#425F57"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignBottom="@+id/imageView"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="78dp"
        android:text="Forgot password"
        android:textColor="#425F57"
        android:textStyle="bold" />


</RelativeLayout>