<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/androidbgwithname"
    tools:context=".Register">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="338dp"
        android:layout_height="480dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="54dp"
        app:srcCompat="@drawable/insidebg" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="107dp"
        android:layout_alignStart="@+id/imageView5"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="385dp"
        android:fontFamily="@font/ketibah"
        android:gravity="center"
        android:text="Register"
        android:textColor="#000000"
        android:textSize="80sp" />

    <ImageView
        android:id="@+id/register_btn"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="63dp"
        app:srcCompat="@drawable/regitrbtn" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="320dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView8"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Name..."
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView8"
        android:layout_alignBottom="@+id/imageView8"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="13dp"
        app:srcCompat="@drawable/baseline_person_2_24" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="255dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/userPhone"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView10"
        android:layout_alignEnd="@+id/imageView10"
        android:layout_alignBottom="@+id/imageView10"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Phone..."
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView10"
        android:layout_alignBottom="@+id/imageView10"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="13dp"
        app:srcCompat="@drawable/baseline_local_phone_24" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="188dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView12"
        android:layout_alignEnd="@+id/imageView12"
        android:layout_alignBottom="@+id/imageView12"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Email..."
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView12"
        android:layout_alignBottom="@+id/imageView12"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="13dp"
        app:srcCompat="@drawable/baseline_email_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="123dp"
        app:srcCompat="@drawable/bgfileds" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView14"
        android:layout_alignEnd="@+id/imageView14"
        android:layout_alignBottom="@+id/imageView14"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="Password..."
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#808080" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageView14"
        android:layout_alignBottom="@+id/imageView14"
        android:layout_marginStart="22dp"
        android:layout_marginBottom="13dp"
        app:srcCompat="@drawable/baseline_lock_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="37dp"
        android:text="Already have an account ?"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/login_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageView5"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="36dp"
        android:text="Login"
        android:textColor="#425F57"
        android:textStyle="bold" />
</RelativeLayout>